<resources>
    <string name="app_name">DemoEmployees</string>
    <string name="new_employee_name">Nombre</string>
    <string name="new_employee_position">Posición</string>
    <string name="new_employee_salary">Salario</string>
    <string name="add_employee">Añadir</string>
    <string name="new_department_name">Nombre del Departamento</string>
    <string name="new_department_city">Ciudad del Departamento</string>
    <string name="add_department">Add departament</string>
    <string name="new_department_id">id del departamento</string>
    <string name="login_activity_name">Login</string>
    <string name="login_username_input_label">Username</string>
    <string name="login_password_input_label">Password</string>
    <string name="login_button">Login</string>
    <string name="employees_activity_name">Employees</string>
    <string name="departments_activity_name">Departments</string>
</resources>