<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/departments_activity_name" />

    <EditText
        android:id="@+id/department_input_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/new_department_id"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1" />
    <EditText
        android:id="@+id/department_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/new_department_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1" />
    <EditText
        android:id="@+id/department_input_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/new_department_city"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1" />

    <Button
        android:id="@+id/add_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:text="@string/add_department" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/departments_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_weight="1" />

</LinearLayout>
